--- a/ML_visao_geral/ML_uma_visao_geral.ipynb
+++ b/ML_visao_geral/ML_uma_visao_geral.ipynb
@@ -1,10 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Machine Learning, uma visão geral\n",
+    "Acredito, que assim como eu, você já deve ter ouvido diversos termos relacionados a ML, como algoritmos supervisionados, não-supervisionados, regressão, classificação, entre outros.\n",
+    "Hoje, quero organizar isso tudo dentro da sua mente, mostrar e te dar uma visão geral sobre esses termos que a gente tanto escuta, e iluminar um pouco do seu caminho."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classificação x Regressão\n",
+    "Então vamos começar do básico, sabe qual a diferença entre classificação e regressão?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
