fazendo alteraç~eos

--- a/Metricas_ML/estudando_metricas.ipynb
+++ b/Metricas_ML/estudando_metricas.ipynb
@@ -557,6 +557,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# testando alterações"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
