finalização do parte de preenchimento de missing

--- a/feature_engineering_and_selection/feature-engineering.ipynb
+++ b/feature_engineering_and_selection/feature-engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,16 @@
     "from feature_engine.imputation import (\n",
     "    MeanMedianImputer,\n",
     "    ArbitraryNumberImputer,\n",
+    "    CategoricalImputer,\n",
+    "    RandomSampleImputer,\n",
+    "    AddMissingIndicator,\n",
+    "    DropMissingData,\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,10 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pegando apenas as colunas com valores faltantes\n",
+    "\n",
     "numerical_features_missing = [col for col in X_train.columns if X_train[col].isnull().any() and X_train[col].dtypes in ['float64', 'int64'] and X_train[col].name != target]\n",
     "categorical_features_missing = [col for col in X_train.columns if X_train[col].isnull().any() and X_train[col].dtypes == 'object' and X_train[col].name != target]"
    ]
@@ -57,40 +63,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mean and Median Input\n",
-    "\n",
-    "No código abaixo criamos uma instância do encoder. Logo em seguida, criamos um novo conjunto de dados de treino e teste, sem valores faltantes."
+    "### Mean and Median Input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1095 entries, 110 to 1354\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   LotFrontage  1095 non-null   float64\n",
-      " 1   MasVnrArea   1095 non-null   float64\n",
-      " 2   GarageYrBlt  1095 non-null   float64\n",
-      "dtypes: float64(3)\n",
-      "memory usage: 34.2 KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mmi =  MeanMedianImputer(imputation_method='median')\n",
+    "mmi =  MeanMedianImputer(imputation_method='median')  # podemos substituir por \"mean\"\n",
     "\n",
     "X_train_mmi = mmi.fit_transform(X_train[numerical_features_missing])  \n",
     "X_test_mmi = mmi.transform(X_test[numerical_features_missing])\n",
     "\n",
-    "X_train_mmi[numerical_features_missing].info()"
+    "X_train_mmi.info()"
    ]
   },
   {
@@ -102,33 +89,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1095 entries, 110 to 1354\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   LotFrontage  1095 non-null   float64\n",
-      " 1   MasVnrArea   1095 non-null   float64\n",
-      " 2   GarageYrBlt  1095 non-null   float64\n",
-      "dtypes: float64(3)\n",
-      "memory usage: 34.2 KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ani = ArbitraryNumberImputer(arbitrary_number=10000)\n",
     "\n",
     "X_train_ani = ani.fit_transform(X_train[numerical_features_missing])\n",
     "X_test_ani = ani.transform(X_test[numerical_features_missing])\n",
     "\n",
-    "X_train_ani[numerical_features_missing].info()"
+    "X_train_ani.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Categorical Imputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cti = CategoricalImputer(imputation_method=\"frequent\")\n",
+    "\n",
+    "X_train_cti = cti.fit_transform(X_train[categorical_features_missing])\n",
+    "X_test_cti = cti.transform(X_train[categorical_features_missing])\n",
+    "\n",
+    "X_train_cti.info()  # nenhum valor faltante"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rsi = RandomSampleImputer()\n",
+    "\n",
+    "X_train_rsi = rsi.fit_transform(X_train[numerical_features_missing + categorical_features_missing])\n",
+    "X_test_rsi = rsi.transform(X_train[numerical_features_missing + categorical_features_missing])\n",
+    "\n",
+    "X_train_rsi.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ami = AddMissingIndicator()\n",
+    "\n",
+    "X_train_ami = ami.fit_transform(X_train[numerical_features_missing + categorical_features_missing])\n",
+    "X_test_ami = ami.transform(X_train[numerical_features_missing + categorical_features_missing])\n",
+    "\n",
+    "X_train_ami.info()\n",
+    "\n",
+    "# Podemos ver que ele adicionou colunas a mais no nosso Dataset, com sufixo _na, essas colunas são os indicadores de missing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dmd = DropMissingData()\n",
+    "\n",
+    "X_train_dmd = dmd.fit_transform(X_train[numerical_features_missing + categorical_features_missing])\n",
+    "X_test_dmd = dmd.transform(X_train[numerical_features_missing + categorical_features_missing])\n",
+    "\n",
+    "X_train_dmd.info()  # foram excluídas as linhas "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Categorical Encoding"
    ]
   },
   {
